# FEMbyGEN

./: .gitignore  InitGui.py  README.md  metadata.txt  package.xml
.github/: FUNDING.yml
AMGeneration2/: Alias.py  FEA.py  Generate.py  InitGui.py  Initiate.py  Results.py
FEMbyGEN/: FEA.py  Generate.py  Generate.ui  Init.py  InitGui.py  Refine.py
FEMbyGEN/fembygen/: Alias.py  Common.py  FEA.py  FRDParser.py  Generate.py  Initiate.py  Refine.py  Results.py  Voxelise.py
FEMbyGEN/fembygen/stltovoxel/: slice.py
fembygen/: Alias.py  Common.py  FEA.py  FRDParser.py  Generate.py  Generate.ui  Initiate.py  PerformFEA.ui  Results.py  Results.ui  Topology.py  UnitConverter.py  createGeo.py
fembygen/design/: Design.py  Taguchi.py
fembygen/design/pydoe2/: doe_box_behnken.py  doe_composite.py  doe_factorial.py  doe_lhs.py  doe_plackett_burman.py
fembygen/topology/: beso_filters.py  beso_lib.py  beso_main.py  beso_plots.py  beso_separate.py
fembygen/ui/: Beso.ui  Beso_GenSelect.ui  Generate.ui  Results.ui  createGeo.ui  more_box_behnken.ui  more_composite.ui  more_lhs.ui
